--- a/FreeCRMTest/test-output/old/Default suite/methods-not-run.html
+++ b/FreeCRMTest/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.crm.qa.testcases.ContactsPageTest.selectMultipleContactsTest</td></tr>
+<tr><td>com.crm.qa.testcases.ContactsPageTest.VALIDATECREATENEWCONTACT</td></tr>
+<tr><td>com.crm.qa.testcases.ContactsPageTest.verifyContactsPageLabel</td></tr>
 </table>
