--- a/FreeCRMTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/FreeCRMTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a81e8">  <td>18/03/04 13:53:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@5f341870]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 14:46:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectSingleContactsTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">selectSingleContactsTest</td> 
+  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 14:45:44</td>   <td>-20473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 14:46:25</td>   <td>20610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
 </table>
