--- a/FreeCRMTest/test-output/old/Default suite/methods.html
+++ b/FreeCRMTest/test-output/old/Default suite/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2cbe0">  <td>18/03/05 14:45:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&gt;&gt;setUp</td> 
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:46:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="e2cbe0">  <td>18/03/05 14:46:05</td>   <td>20473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selectSingleContactsTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">selectSingleContactsTest</td> 
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:46:31</td>   <td>20099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">validateCreateNewContact</td> 
   <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="e2cbe0">  <td>18/03/05 14:46:25</td>   <td>41083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&lt;&lt;tearDown</td> 
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:46:37</td>   <td>26828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:46:38</td>   <td>27534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:46:56</td>   <td>45296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">validateCreateNewContact</td> 
+  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:47:00</td>   <td>49453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:47:01</td>   <td>50137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:47:20</td>   <td>69257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:4, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">validateCreateNewContact</td> 
+  <td>main@1445157774</td>   <td></td> </tr>
+<tr bgcolor="e2cbe0">  <td>18/03/05 15:47:25</td>   <td>74479</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@6500df86]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
 </table>
